--- a/css/index.css
+++ b/css/index.css
@@ -42,7 +42,7 @@
 
 h1.title {
   font-weight: 100;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   opacity: 1.0;
   color: #EEAC9E;
 }
@@ -62,5 +62,16 @@ h1.title {
 #bts-banner {
   width: 100%;
   height: auto;
+}
+
+p.bio-container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+a.visited, a.active, a.hover, a.link {
+  color: #EEAC9E;
 }
 
