--- a/css/index.css
+++ b/css/index.css
@@ -53,6 +53,11 @@ h1.title {
   flex-direction: row;
 }
 
+
+a:visited, a:active, a:hover, a:link, h1.title:visited {
+  color: #EEAC9E;
+}
+
 /* image */
 .img-fluid {
   width: 100%
@@ -69,6 +74,11 @@ p, .list {
   line-height: 1.8
 }
 
+h3.album {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400px;
+}
+
 ul.list {
   list-style-type: disc;
   margin-left: 40px;
@@ -81,8 +91,123 @@ p.bio-container {
   margin-right: 20px;
 }
 
+/* Discography */
 
-a:visited, a:active, a:hover, a:link, h1.title:visited {
-  color: #EEAC9E;
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  display: none; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
+
+
+.overlay-image {
+  position: relative;
+  color: white;
+}
+
+.overlay-image .image {
+  display: block;
+  width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+
+/* Original text overlay */
+.overlay-image .text {
+  background: rgba(0,0,0,0);
+  position: absolute;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    font-family: 'Lato', sans-serif;
+}
+
+/* albums */
+.album-container {
+  display: flex;
+  justify-content: 
+  flex-direction: column;
+}
+
+/* media */
+.column {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+    align-content: center;
+  }
+}
+
+.filters {
+  float: left;
+  background-color: #2196F3;
+  color: #ffffff;
+  width: 100px;
+  line-height: 100px;
+  text-align: center;
+  margin: 2px;
+  display: none;
+  align-content: center;
+}
+
+.show {
+  display: block;
+}
+
+.container {
+  margin-top: 20px;
+  overflow: hidden;
+  align-content: center;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #ddd;
+}
+
+.btn.active {
+  background-color: #666;
+  color: white;
 }
 
