--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,12 +1,35 @@
 .container {
-  position: relative;
-  width: 50%;
+  flex-direction: row;
 }
 
 .image {
   display: block;
   width: 100%;
   height: auto;
+}
+
+/* navbar 
+.navbar-brand .img-responsive {
+  width: 10%;
+  height: auto;
+  display: block;
+}
+
+*/
+
+/*navbar text*/ 
+
+.navbar-nav .nav-item {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 24px;
+  padding: 0px 30px;
+  display: block;
+  float: left;
+}
+
+.navbar-nav {
+  justify-content: center;
+  align-content: center;
 }
 
 .overlay {
@@ -71,7 +94,7 @@ a:visited, a:active, a:hover, a:link, h1.title:visited {
 
 p, .list {
   font-family: 'Open Sans', sans-serif;
-  line-height: 1.8
+  line-height: 1.8;
 }
 
 h3.album {
@@ -152,6 +175,7 @@ p.bio-container {
   width: 100%;
 }
 
+
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
   .column {
@@ -159,7 +183,20 @@ p.bio-container {
     flex: 50%;
     max-width: 50%;
   }
-}
+
+  .navbar-brand .img-responsive {
+    max-width: 10%
+    height: auto;
+    display: block;
+  }
+
+  .navbar-nav .nav-item {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 24px;
+    padding: 0px 70px;
+    display: block;
+    float: left;
+  }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
@@ -167,7 +204,12 @@ p.bio-container {
     -ms-flex: 100%;
     flex: 100%;
   }
-}
+
+  .navbar-brand .img-responsive {
+  max-width: 20%;
+  height: auto;
+  display: block;
+  }
 
 .filterDiv {
   float: left;
@@ -206,5 +248,10 @@ p.bio-container {
 .btn.active {
   background-color: #666;
   color: white;
+}
+
+img {
+  justify-content: center;
+  align-content: center;
 }
 
